--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engine" :{
-    "node":" v22.14.0"
+  "engine": {
+    "node": " v22.14.0"
   },
   "name": "travaura",
   "version": "1.0.0",
@@ -25,6 +25,7 @@
     "joi": "^17.13.3",
     "method": "^2.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.14.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
